fix: overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,6 @@
 
 @media only screen and (max-width: 600px) {
   .container {
-    overflow: hidden;
+    overflow-x: hidden;
   }
 }
