--- a/src/components/CryptoList/CryptoList.css
+++ b/src/components/CryptoList/CryptoList.css
@@ -159,6 +159,6 @@
 @media only screen and (max-width: 1100px) {
   .market-rank,
   .favorite {
-    width: 1.5rem;
+    width: 1.2rem;
   }
 }
